midend/txt.txt
0
Traceback (most recent call last):
  File "check.py", line 28, in <module>
    compile(source,f,'exec')
  File "exec.py", line 1
    def makePalindrome(x,y,z:
                            ^
SyntaxError: invalid syntax
